# ray_tracing

./: Cargo.toml  README.md  flake.nix
configs/: cfg.yml  cornell.yml  final_scene.yml  orig_img.yml  rectangle.yml
src/: aabb.rs  bvh.rs  cameras.rs  lib.rs  main.rs  materials.rs  medium.rs  mediums.rs  objects.rs  texture.rs  textures.rs  transrot.rs  utils.rs
