[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
dyn-clone = "1.0.12"
image = "0.24.6"
indicatif = "0.17.5"
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_yaml = "0.9.25"
threadpool = "1.8.1"
